--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/frontend/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
   
   <script type="text/javascript" src="https://sandbox.web.squarecdn.com/v1/square.js"></script>
